--- a/notebooks/team2/vanessa/strat_0222_lm.ipynb
+++ b/notebooks/team2/vanessa/strat_0222_lm.ipynb
@@ -70,15 +70,15 @@
     "\n",
     "        \n",
     "        # Add indicators\n",
-    "        self.sma_short = bt.indicators.SimpleMovingAverage(self.datas[0], period=50)\n",
-    "        self.sma_long = bt.indicators.SimpleMovingAverage(self.datas[0], period=200)\n",
+    "        self.sma_short = bt.indicators.SimpleMovingAverage(self.datas[1], period=50)\n",
+    "        self.sma_long = bt.indicators.SimpleMovingAverage(self.datas[1], period=200)\n",
     "        \n",
     "        # Add X variables\n",
     "        self.dsma = self.sma_short - self.sma_long\n",
     "        self.mom = bt.Cmp(self.sma_short, self.sma_long)\n",
     "        \n",
-    "        self.rsi_overbought = bt.indicators.RSI(self.datas[0]) > 70\n",
-    "        self.rsi_oversold = bt.indicators.RSI(self.datas[0]) <30\n",
+    "        self.rsi_overbought = bt.indicators.RSI(self.datas[1]) > 70\n",
+    "        self.rsi_oversold = bt.indicators.RSI(self.datas[1]) <30\n",
     "        \n",
     "        self.cross_up = bt.indicators.CrossUp(self.sma_short, self.sma_long) \n",
     "        self.cross_down = bt.indicators.CrossDown(self.sma_short, self.sma_long)\n",
@@ -716,13 +716,7 @@
       "Predicted return, 0.0063\n",
       "Mean Squared Error, 0.0026\n",
       "2014-07-22, BUY CREATE, 12.24\n",
-      "2014-07-23, VIX Return, -0.0588\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2014-07-23, VIX Return, -0.0588\n",
       "Predicted return, 0.0051\n",
       "Mean Squared Error, 0.0041\n",
       "2014-07-23, BUY CREATE, 11.52\n",
@@ -1149,13 +1143,7 @@
       "2014-12-22, VIX Return, -0.0752\n",
       "Predicted return, 0.0038\n",
       "Mean Squared Error, 0.0062\n",
-      "2014-12-22, BUY CREATE, 15.25\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2014-12-22, BUY CREATE, 15.25\n",
       "2014-12-23, VIX Return, -0.0295\n",
       "Predicted return, 0.0028\n",
       "Mean Squared Error, 0.0010\n",
@@ -1456,13 +1444,7 @@
       "Predicted return, 0.0013\n",
       "Mean Squared Error, 0.0114\n",
       "2015-04-13, BUY CREATE, 13.94\n",
-      "2015-04-14, VIX Return, -0.0194\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-04-14, VIX Return, -0.0194\n",
       "Predicted return, 0.0006\n",
       "Mean Squared Error, 0.0004\n",
       "2015-04-14, BUY CREATE, 13.67\n",
@@ -1854,13 +1836,7 @@
       "Predicted return, 0.0152\n",
       "Mean Squared Error, 0.0058\n",
       "2015-08-31, BUY CREATE, 28.43\n",
-      "2015-09-01, VIX Return, 0.1045\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-09-01, VIX Return, 0.1045\n",
       "Predicted return, 0.0164\n",
       "Mean Squared Error, 0.0078\n",
       "2015-09-01, BUY CREATE, 31.40\n",
@@ -2147,13 +2123,7 @@
       "2015-12-11, VIX Return, 0.2611\n",
       "Predicted return, 0.0052\n",
       "Mean Squared Error, 0.0655\n",
-      "2015-12-11, BUY CREATE, 24.39\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-12-11, BUY CREATE, 24.39\n",
       "2015-12-14, VIX Return, -0.0681\n",
       "Predicted return, 0.0039\n",
       "Mean Squared Error, 0.0052\n",
@@ -2478,13 +2448,7 @@
       "Predicted return, 0.0012\n",
       "Mean Squared Error, 0.0033\n",
       "2016-04-11, BUY CREATE, 16.26\n",
-      "2016-04-12, VIX Return, -0.0867\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-04-12, VIX Return, -0.0867\n",
       "Predicted return, 0.0013\n",
       "Mean Squared Error, 0.0077\n",
       "2016-04-12, BUY CREATE, 14.85\n",
@@ -2864,13 +2828,7 @@
       "Predicted return, 0.0031\n",
       "Mean Squared Error, 0.0069\n",
       "2016-08-24, BUY CREATE, 13.45\n",
-      "2016-08-25, VIX Return, 0.0134\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-08-25, VIX Return, 0.0134\n",
       "Predicted return, 0.0033\n",
       "Mean Squared Error, 0.0001\n",
       "2016-08-25, BUY CREATE, 13.63\n",
@@ -3162,13 +3120,7 @@
       "Predicted return, 0.0038\n",
       "Mean Squared Error, 0.0011\n",
       "2016-12-07, BUY CREATE, 12.22\n",
-      "2016-12-08, VIX Return, 0.0344\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-12-08, VIX Return, 0.0344\n",
       "Predicted return, 0.0046\n",
       "Mean Squared Error, 0.0009\n",
       "2016-12-08, BUY CREATE, 12.64\n",
@@ -3492,13 +3444,7 @@
       "Predicted return, 0.0014\n",
       "Mean Squared Error, 0.0084\n",
       "2017-04-05, BUY CREATE, 12.89\n",
-      "2017-04-06, VIX Return, -0.0388\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-04-06, VIX Return, -0.0388\n",
       "Predicted return, 0.0008\n",
       "Mean Squared Error, 0.0016\n",
       "2017-04-06, BUY CREATE, 12.39\n",
@@ -3902,13 +3848,7 @@
       "Predicted return, 0.0032\n",
       "Mean Squared Error, 0.0009\n",
       "2017-08-29, BUY CREATE, 11.70\n",
-      "2017-08-30, VIX Return, -0.0410\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-08-30, VIX Return, -0.0410\n",
       "Predicted return, 0.0024\n",
       "Mean Squared Error, 0.0019\n",
       "2017-08-30, BUY CREATE, 11.22\n",
@@ -4300,13 +4240,7 @@
       "Predicted return, 0.0019\n",
       "Mean Squared Error, 0.0063\n",
       "2018-01-19, BUY CREATE, 11.27\n",
-      "2018-01-22, VIX Return, -0.0213\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2018-01-22, VIX Return, -0.0213\n",
       "Predicted return, 0.0016\n",
       "Mean Squared Error, 0.0005\n",
       "2018-01-22, BUY CREATE, 11.03\n",
