--- a/notebooks/team2/vanessa/strat_0222_ridge.ipynb
+++ b/notebooks/team2/vanessa/strat_0222_ridge.ipynb
@@ -57,15 +57,15 @@
     "\n",
     "        \n",
     "        # Add indicators\n",
-    "        self.sma_short = bt.indicators.SimpleMovingAverage(self.datas[0], period=50)\n",
-    "        self.sma_long = bt.indicators.SimpleMovingAverage(self.datas[0], period=200)\n",
+    "        self.sma_short = bt.indicators.SimpleMovingAverage(self.datas[1], period=50)\n",
+    "        self.sma_long = bt.indicators.SimpleMovingAverage(self.datas[1], period=200)\n",
     "        \n",
     "        # Add X variables\n",
     "        self.dsma = self.sma_short - self.sma_long\n",
     "        self.mom = bt.Cmp(self.sma_short, self.sma_long)\n",
     "        \n",
-    "        self.rsi_overbought = bt.indicators.RSI(self.datas[0]) > 70\n",
-    "        self.rsi_oversold = bt.indicators.RSI(self.datas[0]) <30\n",
+    "        self.rsi_overbought = bt.indicators.RSI(self.datas[1]) > 70\n",
+    "        self.rsi_oversold = bt.indicators.RSI(self.datas[1]) <30\n",
     "        \n",
     "        self.cross_up = bt.indicators.CrossUp(self.sma_short, self.sma_long) \n",
     "        self.cross_down = bt.indicators.CrossDown(self.sma_short, self.sma_long)\n",
@@ -731,13 +731,7 @@
       "2014-08-27, VIX Return, 0.0129\n",
       "Predicted return, 0.0000\n",
       "Mean Squared Error, nan\n",
-      "2014-08-28, VIX Return, 0.0229\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2014-08-28, VIX Return, 0.0229\n",
       "Predicted return, 0.0000\n",
       "Mean Squared Error, nan\n",
       "2014-08-29, VIX Return, 0.0033\n",
@@ -1151,13 +1145,7 @@
       "Predicted return, 0.0037\n",
       "Mean Squared Error, 0.0071\n",
       "2015-02-05, BUY CREATE, 16.85\n",
-      "2015-02-06, VIX Return, 0.0261\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-02-06, VIX Return, 0.0261\n",
       "Predicted return, 0.0039\n",
       "Mean Squared Error, 0.0005\n",
       "2015-02-06, BUY CREATE, 17.29\n",
@@ -1509,13 +1497,7 @@
       "Predicted return, 0.0041\n",
       "Mean Squared Error, 0.0047\n",
       "2015-06-12, BUY CREATE, 13.78\n",
-      "2015-06-15, VIX Return, 0.1168\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-06-15, VIX Return, 0.1168\n",
       "Predicted return, 0.0047\n",
       "Mean Squared Error, 0.0126\n",
       "2015-06-15, BUY CREATE, 15.39\n",
@@ -1903,13 +1885,7 @@
       "Predicted return, 0.0005\n",
       "Mean Squared Error, 0.0004\n",
       "2015-10-29, BUY CREATE, 14.61\n",
-      "2015-10-30, VIX Return, 0.0315\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-10-30, VIX Return, 0.0315\n",
       "Predicted return, 0.0005\n",
       "Mean Squared Error, 0.0010\n",
       "2015-10-30, BUY CREATE, 15.07\n",
@@ -2221,13 +2197,7 @@
       "Predicted return, 0.0054\n",
       "Mean Squared Error, 0.0059\n",
       "2016-02-23, BUY CREATE, 20.98\n",
-      "2016-02-24, VIX Return, -0.0124\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-02-24, VIX Return, -0.0124\n",
       "Predicted return, 0.0062\n",
       "Mean Squared Error, 0.0003\n",
       "2016-02-24, BUY CREATE, 20.72\n",
@@ -2631,13 +2601,7 @@
       "Predicted return, 0.0001\n",
       "Mean Squared Error, 0.0003\n",
       "2016-07-18, BUY CREATE, 12.44\n",
-      "2016-07-19, VIX Return, -0.0378\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-07-19, VIX Return, -0.0378\n",
       "Predicted return, 0.0001\n",
       "Mean Squared Error, 0.0014\n",
       "2016-07-19, BUY CREATE, 11.97\n",
@@ -3029,13 +2993,7 @@
       "Predicted return, 0.0012\n",
       "Mean Squared Error, 0.0200\n",
       "2016-12-05, BUY CREATE, 12.14\n",
-      "2016-12-06, VIX Return, -0.0288\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-12-06, VIX Return, -0.0288\n",
       "Predicted return, 0.0007\n",
       "Mean Squared Error, 0.0009\n",
       "2016-12-06, BUY CREATE, 11.79\n",
@@ -3335,13 +3293,7 @@
       "Predicted return, 0.0027\n",
       "Mean Squared Error, 0.0002\n",
       "2017-03-24, BUY CREATE, 12.96\n",
-      "2017-03-27, VIX Return, -0.0355\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-03-27, VIX Return, -0.0355\n",
       "Predicted return, 0.0023\n",
       "Mean Squared Error, 0.0014\n",
       "2017-03-27, BUY CREATE, 12.50\n",
@@ -3709,13 +3661,7 @@
       "Predicted return, 0.0001\n",
       "Mean Squared Error, 0.0015\n",
       "2017-08-04, BUY CREATE, 10.03\n",
-      "2017-08-07, VIX Return, -0.0100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-08-07, VIX Return, -0.0100\n",
       "Predicted return, 0.0003\n",
       "Mean Squared Error, 0.0001\n",
       "2017-08-07, BUY CREATE, 9.93\n",
@@ -4050,13 +3996,7 @@
       "2017-12-04, VIX Return, 0.0219\n",
       "Predicted return, 0.0028\n",
       "Mean Squared Error, 0.0004\n",
-      "2017-12-04, BUY CREATE, 11.68\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-12-04, BUY CREATE, 11.68\n",
       "2017-12-05, VIX Return, -0.0300\n",
       "Predicted return, 0.0026\n",
       "Mean Squared Error, 0.0011\n",
