add mom strat and result

--- a/notebooks/team2/vanessa/Indicator_Base/MSFT_RSI_OS.ipynb
+++ b/notebooks/team2/vanessa/Indicator_Base/MSFT_RSI_OS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,43 +20,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Move indicator into its own Class so that will show up in output file. \n",
-    "# #Reference: https://www.backtrader.com/docu/inddev.html\n",
-    "# class RSI_Oversold(bt.Indicator):\n",
-    "#     lines = ('oversold',)\n",
+    "#Move indicator into its own Class so that will show up in output file. \n",
+    "#Reference: https://www.backtrader.com/docu/inddev.html\n",
+    "class RSI_Oversold(bt.Indicator):\n",
+    "    lines = ('oversold',)\n",
     "    \n",
-    "#     params = (\n",
-    "#         ('level', 30),    \n",
-    "#     )\n",
+    "    params = (\n",
+    "        ('level', 30),    \n",
+    "    )\n",
     "\n",
-    "#     def __init__(self):\n",
-    "#         self.lines.oversold = bt.indicators.RSI(self.data) < self.p.level"
+    "    def __init__(self):\n",
+    "        self.lines.oversold = bt.indicators.RSI(self.data) < self.p.level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# class RSI_Overbought(bt.Indicator):\n",
-    "#     lines = ('overbought',)\n",
+    "class RSI_Overbought(bt.Indicator):\n",
+    "    lines = ('overbought',)\n",
     "    \n",
-    "#     params = (\n",
-    "#         ('level', 70),    \n",
-    "#     )\n",
+    "    params = (\n",
+    "        ('level', 70),    \n",
+    "    )\n",
     "\n",
-    "#     def __init__(self):\n",
-    "#         self.lines.overbought = bt.indicators.RSI(self.data) > self.p.level"
+    "    def __init__(self):\n",
+    "        self.lines.overbought = bt.indicators.RSI(self.data) > self.p.level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "class HVStrategy(bt.Strategy):\n",
     "    params = (\n",
     "        (\"symbols\", None),\n",
-    "        (\"max_days_in_trade\", 7), # set to 7 as default, can modify this in the future\n",
+    "        (\"max_days_in_trade\", 4), # set to 7 as default, can modify this in the future\n",
     "        (\"y\", None)\n",
     "    )\n",
     "\n",
@@ -85,17 +85,17 @@
     "        # Use this instead of below to be able to see full indicator (not just RSI) in output file\n",
     "        \n",
     "        # Add RSI\n",
-    "        self.rsi = bt.indicators.RSI(self.vol)\n",
+    "        self.rsi = bt.indicators.RSI(self.stock_px)\n",
     "#         self.rsi_oversold = RSI_Oversold(self.stock_px)\n",
     "#         self.rsi_overbought = RSI_Overbought(self.stock_px)\n",
     "        self.rsi_oversold = self.rsi < 30\n",
     "        self.rsi_overbought = self.rsi > 70\n",
     "        \n",
     "        # Add LaguerreRSI\n",
-    "        self.lrsi = bt.indicators.LRSI(self.vol)\n",
+    "        self.lrsi = bt.indicators.LRSI(self.stock_px)\n",
     "        \n",
     "        # Add TSI\n",
-    "        self.tsi = bt.indicators.TSI(self.vol)\n",
+    "        self.tsi = bt.indicators.TSI(self.stock_px)\n",
     "        \n",
     "#         # Add WilliamsAD & WilliamsR\n",
     "#         self.will_AD = bt.indicators.WilliamsAD(self.stock_px)\n",
@@ -161,14 +161,14 @@
     "            #If not has our indicator triggered?\n",
     "            if (self.rsi_oversold[0] > 0):\n",
     "#             if (self.rsi_oversold[0] > 0 or self.rsi_overbought[0] > 0):\n",
-    "#                 print(\"Oversold/bought indicator triggered...entering position\")\n",
+    "#                 print(\"Oversold indicator triggered...entering position\")\n",
     "                self.buy(exectype=bt.Order.Close)\n",
     "                self.days_in_trade = 1\n",
     "                \n",
-    "            if self.rsi_overbought[0] > 0:\n",
-    "#                 print(\"Overbought indicator triggered...entering position\")\n",
-    "                self.sell(exectype=bt.Order.Close)\n",
-    "                self.days_in_trade = 1\n",
+    "#             if self.rsi_overbought[0] > 0:\n",
+    "# #                 print(\"Overbought indicator triggered...entering position\")\n",
+    "#                 self.sell(exectype=bt.Order.Close)\n",
+    "#                 self.days_in_trade = 1\n",
     "                               \n",
     "        else:\n",
     "            self.days_in_trade += 1\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,26 @@
      "output_type": "stream",
      "text": [
       "Starting Portfolio Value: 100000.00\n",
-      "Final Portfolio Value: 100347.72\n"
+      "Final Portfolio Value: 100017.82\n",
+      "Sharpe Ratio: OrderedDict([('sharperatio', -25.58440354330068)])\n",
+      "Max Draw Down: OrderedDict([('maxdrawdown', 0.02302231054827571), ('maxdrawdownperiod', 563)]) \n",
+      "\n",
+      "total : AutoOrderedDict([('total', 21), ('open', 0), ('closed', 21)]) \n",
+      "\n",
+      "streak : AutoOrderedDict([('won', AutoOrderedDict([('current', 0), ('longest', 8)])), ('lost', AutoOrderedDict([('current', 2), ('longest', 2)]))]) \n",
+      "\n",
+      "pnl : AutoOrderedDict([('gross', AutoOrderedDict([('total', 17.819999999999975), ('average', 0.8485714285714274)])), ('net', AutoOrderedDict([('total', 17.819999999999975), ('average', 0.8485714285714274)]))]) \n",
+      "\n",
+      "won : AutoOrderedDict([('total', 15), ('pnl', AutoOrderedDict([('total', 55.529999999999994), ('average', 3.7019999999999995), ('max', 9.74)]))]) \n",
+      "\n",
+      "lost : AutoOrderedDict([('total', 6), ('pnl', AutoOrderedDict([('total', -37.71000000000001), ('average', -6.285000000000001), ('max', -22.040000000000003)]))]) \n",
+      "\n",
+      "long : AutoOrderedDict([('total', 21), ('pnl', AutoOrderedDict([('total', 17.819999999999975), ('average', 0.8485714285714274), ('won', AutoOrderedDict([('total', 55.529999999999994), ('average', 3.7019999999999995), ('max', 9.74)])), ('lost', AutoOrderedDict([('total', -37.71000000000001), ('average', -6.285000000000001), ('max', -22.040000000000003)]))])), ('won', 15), ('lost', 6)]) \n",
+      "\n",
+      "short : AutoOrderedDict([('total', 0), ('pnl', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('won', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('max', 0.0)])), ('lost', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('max', 0.0)]))])), ('won', 0), ('lost', 0)]) \n",
+      "\n",
+      "len : AutoOrderedDict([('total', 63), ('average', 3.0), ('max', 3), ('min', 3), ('won', AutoOrderedDict([('total', 45), ('average', 3.0), ('max', 3), ('min', 3)])), ('lost', AutoOrderedDict([('total', 18), ('average', 3.0), ('max', 3), ('min', 3)])), ('long', AutoOrderedDict([('total', 63), ('average', 3.0), ('max', 3), ('min', 3), ('won', AutoOrderedDict([('total', 45), ('average', 3.0), ('max', 3), ('min', 3)])), ('lost', AutoOrderedDict([('total', 18), ('average', 3.0), ('max', 3), ('min', 3)]))])), ('short', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807), ('won', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)])), ('lost', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)]))]))]) \n",
+      "\n"
      ]
     }
    ],
@@ -217,6 +236,11 @@
     "    \n",
     "    # Add a strategy\n",
     "    cerebro.addstrategy(HVStrategy, symbols=symbol_cols, y=y)\n",
+    "    \n",
+    "    # Add Analyzers\n",
+    "    cerebro.addanalyzer(bt.analyzers.TimeDrawDown,_name=\"DrawDown\")\n",
+    "    cerebro.addanalyzer(bt.analyzers.SharpeRatio, _name='mySharpe',timeframe=7)\n",
+    "    cerebro.addanalyzer(bt.analyzers.TradeAnalyzer, _name='TA')\n",
     "\n",
     "    # Set our desired cash start\n",
     "    cerebro.broker.setcash(100000.0)\n",
@@ -225,17 +249,31 @@
     "#     cerebro.broker.setcommission(commission=0.001)\n",
     "\n",
     "    # Write output\n",
-    "    cerebro.addwriter(bt.WriterFile, out='YHOO-VOL-TI-HV10.csv',csv=True)\n",
+    "    cerebro.addwriter(bt.WriterFile, out='YHOO-BT-HV10.csv',csv=True)\n",
     "    \n",
     "    # Print out the starting conditions\n",
     "    print('Starting Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
     "\n",
     "    # Run over everything\n",
-    "    cerebro.run()\n",
+    "    thestrats = cerebro.run()\n",
+    "    thestrat = thestrats[0]\n",
     "\n",
     "    # Print out the final result\n",
-    "    print('Final Portfolio Value: %.2f' % cerebro.broker.getvalue())"
+    "    print('Final Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
+    "    \n",
+    "    print('Sharpe Ratio:', thestrat.analyzers.mySharpe.get_analysis())\n",
+    "    print('Max Draw Down:',thestrat.analyzers.DrawDown.get_analysis(),\"\\n\")\n",
+    "    #print('Trade Stats:',thestrat.analyzers.TA.get_analysis())\n",
+    "    for k,v in thestrat.analyzers.TA.get_analysis().items():\n",
+    "        print(k,\":\",v,\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
