add new indicators and straddle-based strategy

--- a/notebooks/team2/vanessa/Indicator_Base/AAPL_LRSI_OS.ipynb
+++ b/notebooks/team2/vanessa/Indicator_Base/AAPL_LRSI_OS.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,22 @@
     "#             elif (self.rsi_overbought[0] > 0 or self.days_in_trade < self.p.max_days_in_trade):\n",
     "#                 self.days_in_trade += 1\n",
     "#                 print(\"In position %d days\" % self.days_in_trade)\n",
+    " \n",
+    "#  #===============================================================================================       \n",
+    "#         if (self.lrsi_oversold[0] > 0 and self.days_in_trade < self.p.max_days_in_trade):             \n",
+    "#             self.buy(exectype=bt.Order.Close)\n",
+    "#             self.days_in_trade = 1\n",
+    "#             self.flag = 1\n",
     "            \n",
+    "\n",
+    "#         self.days_in_trade += 1\n",
+    "        \n",
+    "#         if (self.days_in_trade == self.p.max_days_in_trade):\n",
+    "#             self.close(exectype=bt.Order.Close)\n",
+    "#             self.days_in_trade = 0\n",
+    "# #===============================================================================================\n",
+    "    \n",
+    "    \n",
     "        # Check if we are currently in a trade\n",
     "        if(not size):\n",
     "            #If not has our indicator triggered?\n",
@@ -181,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,25 +204,25 @@
      "output_type": "stream",
      "text": [
       "Starting Portfolio Value: 100000.00\n",
-      "Final Portfolio Value: 100074.53\n",
-      "Sharpe Ratio: OrderedDict([('sharperatio', -9.258034753263434)])\n",
-      "Max Draw Down: OrderedDict([('maxdrawdown', 0.04869478689042114), ('maxdrawdownperiod', 760)]) \n",
+      "Final Portfolio Value: 99087.76\n",
+      "Sharpe Ratio: OrderedDict([('sharperatio', -1.167042941053382)])\n",
+      "Max Draw Down: OrderedDict([('maxdrawdown', 1.0054235947700638), ('maxdrawdownperiod', 1922)]) \n",
       "\n",
-      "total : AutoOrderedDict([('total', 123), ('open', 0), ('closed', 123)]) \n",
+      "total : AutoOrderedDict([('total', 77), ('open', 0), ('closed', 77)]) \n",
       "\n",
-      "streak : AutoOrderedDict([('won', AutoOrderedDict([('current', 1), ('longest', 5)])), ('lost', AutoOrderedDict([('current', 0), ('longest', 6)]))]) \n",
+      "streak : AutoOrderedDict([('won', AutoOrderedDict([('current', 0), ('longest', 4)])), ('lost', AutoOrderedDict([('current', 2), ('longest', 4)]))]) \n",
       "\n",
-      "pnl : AutoOrderedDict([('gross', AutoOrderedDict([('total', 74.52999999999997), ('average', 0.6059349593495933)])), ('net', AutoOrderedDict([('total', 74.52999999999997), ('average', 0.6059349593495933)]))]) \n",
+      "pnl : AutoOrderedDict([('gross', AutoOrderedDict([('total', -912.2400000000006), ('average', -11.847272727272735)])), ('net', AutoOrderedDict([('total', -912.2400000000006), ('average', -11.847272727272735)]))]) \n",
       "\n",
-      "won : AutoOrderedDict([('total', 58), ('pnl', AutoOrderedDict([('total', 334.2000000000001), ('average', 5.762068965517243), ('max', 33.44)]))]) \n",
+      "won : AutoOrderedDict([('total', 32), ('pnl', AutoOrderedDict([('total', 1133.7699999999995), ('average', 35.430312499999985), ('max', 224.30000000000004)]))]) \n",
       "\n",
-      "lost : AutoOrderedDict([('total', 65), ('pnl', AutoOrderedDict([('total', -259.67), ('average', -3.9949230769230772), ('max', -42.89)]))]) \n",
+      "lost : AutoOrderedDict([('total', 45), ('pnl', AutoOrderedDict([('total', -2046.0100000000004), ('average', -45.466888888888896), ('max', -359.82000000000016)]))]) \n",
       "\n",
-      "long : AutoOrderedDict([('total', 123), ('pnl', AutoOrderedDict([('total', 74.52999999999997), ('average', 0.6059349593495933), ('won', AutoOrderedDict([('total', 334.2000000000001), ('average', 5.762068965517243), ('max', 33.44)])), ('lost', AutoOrderedDict([('total', -259.67), ('average', -3.9949230769230772), ('max', -42.89)]))])), ('won', 58), ('lost', 65)]) \n",
+      "long : AutoOrderedDict([('total', 77), ('pnl', AutoOrderedDict([('total', -912.2400000000006), ('average', -11.847272727272735), ('won', AutoOrderedDict([('total', 1133.7699999999995), ('average', 35.430312499999985), ('max', 224.30000000000004)])), ('lost', AutoOrderedDict([('total', -2046.0100000000004), ('average', -45.466888888888896), ('max', -359.82000000000016)]))])), ('won', 32), ('lost', 45)]) \n",
       "\n",
       "short : AutoOrderedDict([('total', 0), ('pnl', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('won', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('max', 0.0)])), ('lost', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('max', 0.0)]))])), ('won', 0), ('lost', 0)]) \n",
       "\n",
-      "len : AutoOrderedDict([('total', 738), ('average', 6.0), ('max', 6), ('min', 6), ('won', AutoOrderedDict([('total', 348), ('average', 6.0), ('max', 6), ('min', 6)])), ('lost', AutoOrderedDict([('total', 390), ('average', 6.0), ('max', 6), ('min', 6)])), ('long', AutoOrderedDict([('total', 738), ('average', 6.0), ('max', 6), ('min', 6), ('won', AutoOrderedDict([('total', 348), ('average', 6.0), ('max', 6), ('min', 6)])), ('lost', AutoOrderedDict([('total', 390), ('average', 6.0), ('max', 6), ('min', 6)]))])), ('short', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807), ('won', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)])), ('lost', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)]))]))]) \n",
+      "len : AutoOrderedDict([('total', 883), ('average', 11.467532467532468), ('max', 38), ('min', 5), ('won', AutoOrderedDict([('total', 374), ('average', 11.6875), ('max', 38), ('min', 5)])), ('lost', AutoOrderedDict([('total', 509), ('average', 11.311111111111112), ('max', 38), ('min', 5)])), ('long', AutoOrderedDict([('total', 883), ('average', 11.467532467532468), ('max', 38), ('min', 5), ('won', AutoOrderedDict([('total', 374), ('average', 11.6875), ('max', 38), ('min', 5)])), ('lost', AutoOrderedDict([('total', 509), ('average', 11.311111111111112), ('max', 38), ('min', 5)]))])), ('short', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807), ('won', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)])), ('lost', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)]))]))]) \n",
       "\n"
      ]
     }
