--- a/notebooks/team2/vanessa/Indicator_Base/MSFT_RSI_OS.ipynb
+++ b/notebooks/team2/vanessa/Indicator_Base/MSFT_RSI_OS.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,35 +154,50 @@
     "#             elif (self.rsi_overbought[0] > 0 or self.days_in_trade < self.p.max_days_in_trade):\n",
     "#                 self.days_in_trade += 1\n",
     "#                 print(\"In position %d days\" % self.days_in_trade)\n",
+    "\n",
+    " #===============================================================================================       \n",
+    "        if (self.rsi_oversold[0] > 0 and self.days_in_trade < self.p.max_days_in_trade):             \n",
+    "            self.buy(exectype=bt.Order.Close)\n",
+    "            self.days_in_trade = 1\n",
+    "            self.flag = 1\n",
     "            \n",
-    "        \n",
-    "        # Check if we are currently in a trade\n",
-    "        if(not size):\n",
-    "            #If not has our indicator triggered?\n",
-    "            if (self.rsi_oversold[0] > 0):\n",
-    "#             if (self.rsi_oversold[0] > 0 or self.rsi_overbought[0] > 0):\n",
-    "#                 print(\"Oversold indicator triggered...entering position\")\n",
-    "                self.buy(exectype=bt.Order.Close)\n",
-    "                self.days_in_trade = 1\n",
-    "                \n",
-    "#             if self.rsi_overbought[0] > 0:\n",
-    "# #                 print(\"Overbought indicator triggered...entering position\")\n",
-    "#                 self.sell(exectype=bt.Order.Close)\n",
-    "#                 self.days_in_trade = 1\n",
-    "                               \n",
-    "        else:\n",
+    "\n",
+    "        elif (self.days_in_trade < self.p.max_days_in_trade or self.rsi_oversold[0] > 0): \n",
     "            self.days_in_trade += 1\n",
-    "#             print(\"In position %d days\" % self.days_in_trade)\n",
+    "        \n",
+    "        if (self.days_in_trade == self.p.max_days_in_trade):\n",
+    "            self.close(exectype=bt.Order.Close)\n",
+    "            self.days_in_trade = 0\n",
+    "#===============================================================================================\n",
+    "\n",
+    "        \n",
+    "#         # Check if we are currently in a trade\n",
+    "#         if(not size):\n",
+    "#             #If not has our indicator triggered?\n",
+    "#             if (self.rsi_oversold[0] > 0):\n",
+    "# #             if (self.rsi_oversold[0] > 0 or self.rsi_overbought[0] > 0):\n",
+    "# #                 print(\"Oversold indicator triggered...entering position\")\n",
+    "#                 self.buy(exectype=bt.Order.Close)\n",
+    "#                 self.days_in_trade = 1\n",
+    "                \n",
+    "# #             if self.rsi_overbought[0] > 0:\n",
+    "# # #                 print(\"Overbought indicator triggered...entering position\")\n",
+    "# #                 self.sell(exectype=bt.Order.Close)\n",
+    "# #                 self.days_in_trade = 1\n",
+    "                               \n",
+    "#         else:\n",
+    "#             self.days_in_trade += 1\n",
+    "# #             print(\"In position %d days\" % self.days_in_trade)\n",
     "            \n",
-    "            if self.days_in_trade == self.p.max_days_in_trade:\n",
-    "#                 print(\"Max days to hold trade reached...closing position\")\n",
-    "                self.close(exectype=bt.Order.Close)\n",
-    "                self.days_in_trade = 0"
+    "#             if self.days_in_trade == self.p.max_days_in_trade:\n",
+    "# #                 print(\"Max days to hold trade reached...closing position\")\n",
+    "#                 self.close(exectype=bt.Order.Close)\n",
+    "#                 self.days_in_trade = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -190,25 +205,25 @@
      "output_type": "stream",
      "text": [
       "Starting Portfolio Value: 100000.00\n",
-      "Final Portfolio Value: 100017.82\n",
-      "Sharpe Ratio: OrderedDict([('sharperatio', -25.58440354330068)])\n",
-      "Max Draw Down: OrderedDict([('maxdrawdown', 0.02302231054827571), ('maxdrawdownperiod', 563)]) \n",
+      "Final Portfolio Value: 100058.12\n",
+      "Sharpe Ratio: OrderedDict([('sharperatio', -16.3307369655263)])\n",
+      "Max Draw Down: OrderedDict([('maxdrawdown', 0.023969161145326007), ('maxdrawdownperiod', 760)]) \n",
       "\n",
-      "total : AutoOrderedDict([('total', 21), ('open', 0), ('closed', 21)]) \n",
+      "total : AutoOrderedDict([('total', 14), ('open', 0), ('closed', 14)]) \n",
       "\n",
-      "streak : AutoOrderedDict([('won', AutoOrderedDict([('current', 0), ('longest', 8)])), ('lost', AutoOrderedDict([('current', 2), ('longest', 2)]))]) \n",
+      "streak : AutoOrderedDict([('won', AutoOrderedDict([('current', 0), ('longest', 5)])), ('lost', AutoOrderedDict([('current', 1), ('longest', 1)]))]) \n",
       "\n",
-      "pnl : AutoOrderedDict([('gross', AutoOrderedDict([('total', 17.819999999999975), ('average', 0.8485714285714274)])), ('net', AutoOrderedDict([('total', 17.819999999999975), ('average', 0.8485714285714274)]))]) \n",
+      "pnl : AutoOrderedDict([('gross', AutoOrderedDict([('total', 58.12000000000005), ('average', 4.151428571428575)])), ('net', AutoOrderedDict([('total', 58.12000000000005), ('average', 4.151428571428575)]))]) \n",
       "\n",
-      "won : AutoOrderedDict([('total', 15), ('pnl', AutoOrderedDict([('total', 55.529999999999994), ('average', 3.7019999999999995), ('max', 9.74)]))]) \n",
+      "won : AutoOrderedDict([('total', 11), ('pnl', AutoOrderedDict([('total', 71.08000000000004), ('average', 6.4618181818181855), ('max', 25.940000000000005)]))]) \n",
       "\n",
-      "lost : AutoOrderedDict([('total', 6), ('pnl', AutoOrderedDict([('total', -37.71000000000001), ('average', -6.285000000000001), ('max', -22.040000000000003)]))]) \n",
+      "lost : AutoOrderedDict([('total', 3), ('pnl', AutoOrderedDict([('total', -12.959999999999994), ('average', -4.319999999999998), ('max', -8.159999999999997)]))]) \n",
       "\n",
-      "long : AutoOrderedDict([('total', 21), ('pnl', AutoOrderedDict([('total', 17.819999999999975), ('average', 0.8485714285714274), ('won', AutoOrderedDict([('total', 55.529999999999994), ('average', 3.7019999999999995), ('max', 9.74)])), ('lost', AutoOrderedDict([('total', -37.71000000000001), ('average', -6.285000000000001), ('max', -22.040000000000003)]))])), ('won', 15), ('lost', 6)]) \n",
+      "long : AutoOrderedDict([('total', 14), ('pnl', AutoOrderedDict([('total', 58.12000000000005), ('average', 4.151428571428575), ('won', AutoOrderedDict([('total', 71.08000000000004), ('average', 6.4618181818181855), ('max', 25.940000000000005)])), ('lost', AutoOrderedDict([('total', -12.959999999999994), ('average', -4.319999999999998), ('max', -8.159999999999997)]))])), ('won', 11), ('lost', 3)]) \n",
       "\n",
       "short : AutoOrderedDict([('total', 0), ('pnl', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('won', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('max', 0.0)])), ('lost', AutoOrderedDict([('total', 0.0), ('average', 0.0), ('max', 0.0)]))])), ('won', 0), ('lost', 0)]) \n",
       "\n",
-      "len : AutoOrderedDict([('total', 63), ('average', 3.0), ('max', 3), ('min', 3), ('won', AutoOrderedDict([('total', 45), ('average', 3.0), ('max', 3), ('min', 3)])), ('lost', AutoOrderedDict([('total', 18), ('average', 3.0), ('max', 3), ('min', 3)])), ('long', AutoOrderedDict([('total', 63), ('average', 3.0), ('max', 3), ('min', 3), ('won', AutoOrderedDict([('total', 45), ('average', 3.0), ('max', 3), ('min', 3)])), ('lost', AutoOrderedDict([('total', 18), ('average', 3.0), ('max', 3), ('min', 3)]))])), ('short', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807), ('won', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)])), ('lost', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)]))]))]) \n",
+      "len : AutoOrderedDict([('total', 71), ('average', 5.071428571428571), ('max', 12), ('min', 3), ('won', AutoOrderedDict([('total', 59), ('average', 5.363636363636363), ('max', 12), ('min', 3)])), ('lost', AutoOrderedDict([('total', 12), ('average', 4.0), ('max', 6), ('min', 3)])), ('long', AutoOrderedDict([('total', 71), ('average', 5.071428571428571), ('max', 12), ('min', 3), ('won', AutoOrderedDict([('total', 59), ('average', 5.363636363636363), ('max', 12), ('min', 3)])), ('lost', AutoOrderedDict([('total', 12), ('average', 4.0), ('max', 6), ('min', 3)]))])), ('short', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807), ('won', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)])), ('lost', AutoOrderedDict([('total', 0), ('average', 0.0), ('max', 0), ('min', 9223372036854775807)]))]))]) \n",
       "\n"
      ]
     }
@@ -219,7 +234,7 @@
     "    cerebro = bt.Cerebro()\n",
     "    \n",
     "    # Add data\n",
-    "    datapath = os.path.join('../../../../datas/YHOO.csv')\n",
+    "    datapath = os.path.join('../../../../datas/MSFT.csv')\n",
     "    \n",
     "    datas = pd.read_csv(datapath, parse_dates=True,index_col=0)\n",
     "    \n",
@@ -249,7 +264,7 @@
     "#     cerebro.broker.setcommission(commission=0.001)\n",
     "\n",
     "    # Write output\n",
-    "    cerebro.addwriter(bt.WriterFile, out='YHOO-BT-HV10.csv',csv=True)\n",
+    "    cerebro.addwriter(bt.WriterFile, out='MSFT-BT-HV10-test.csv',csv=True)\n",
     "    \n",
     "    # Print out the starting conditions\n",
     "    print('Starting Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
