--- a/notebooks/team2/vanessa/Indicator_Base/Stats_Collector.ipynb
+++ b/notebooks/team2/vanessa/Indicator_Base/Stats_Collector.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -39,11 +39,11 @@
     "First read data\n",
     "'''\n",
     "# specify date column index (index starts from 0)\n",
-    "date_ind = 3\n",
+    "date_ind = 12\n",
     "# input directory path\n",
     "# input_dir = \"/Users/lishuo/Desktop/NYU_Academics/NYU_Spring_2018/Capstone Project/After_First_Presentation/Sample_Assets/\"\n",
     "# file name\n",
-    "filename1 = \"YHOO-TI-HV10-STATS.csv\"\n",
+    "filename1 = \"MSFT-indicators.csv\"\n",
     "# read data, need specify the file type as the first argument. NOTE: ONLY csv or excel are valid!\n",
     "# df_yhoo_rv10 = sc.read_data(\"csv\",input_dir+filename1,date_ind)\n",
     "df_msft_rv10 = sc.read_data(\"csv\",filename1,date_ind)"
@@ -51,34 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nThen, mark all signals you are interested in. If your input file has all signals you want, skip this.\\n'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Then, mark all signals you are interested in. If your input file has all signals you want, skip this.\n",
-    "'''\n",
-    "# df_yhoo_rv10 = sc.mark_crosses(df_yhoo_rv10,\"sma\",\"sma.1\",\"5\",\"30\")\n",
-    "# df_yhoo_rv10 = sc.mark_crosses(df_yhoo_rv10,\"sma.2\",\"sma.3\",\"50\",\"200\")\n",
-    "# df_yhoo_rv10 = sc.mark_crosses(df_yhoo_rv10,\"ema\",\"ema.1\",\"12\",\"26\")\n",
-    "# df_yhoo_rv10 = sc.mark_BBands_Breaks(df_yhoo_rv10,\"bot\",\"top\",\"close.1\")\n",
-    "# df_yhoo_rv10 = sc.mark_obos(df_yhoo_rv10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -108,8 +81,8 @@
     "day_interval = [5,10,20,30,63,126,252]\n",
     "#---------------------------------------\n",
     "# specify the signal list. The signal name MUST align with the column name corresponds to that signal\n",
-    "signal_list = [\"rsi_OB_70\",\"rsi_OS_30\",\"lrsi_OB_07\",\"lrsi_OS_03\",\"tsi_pos\",\n",
-    "               \"tsi_neg\"]\n",
+    "signal_list = [\"rsi_os_30\",\"rsi_ob_70\",\"lrsi_os_03\",\"lrsi_ob_07\",\"tsi_os\",\n",
+    "               \"tsi_ob\", \"ao_os\", \"ao_ob\", \"uo_os_30\", \"uo_ob_60\", \"cci_os\", \"cci_ob\", \"wr_os\", \"wr_ob\"]\n",
     "#---------------------------------------\n",
     "# The following inputs form the threshold to sift strong signals.\n",
     "#---------------------------------------\n",
@@ -138,8 +111,8 @@
     "# higher than 1.3 or lower than 0.7\n",
     "\n",
     "output_dir = \"\"\n",
-    "output_file_name = \"YHOO_HV10_Stats_0320\"\n",
-    "sc.export_summary_table(day_interval,df_msft_rv10,signal_list,\"close\",output_dir,output_file_name,\n",
+    "output_file_name = \"MSFT-stats\"\n",
+    "sc.export_summary_table(day_interval,df_msft_rv10,signal_list,\"close.6\",output_dir,output_file_name,\n",
     "                    target_stats,target_day_interval,n_dict,min_chg)\n",
     "\n",
     "print(\"Export Finished!\")"
